Fix table of contents overlapping with code snippets

--- a/CSS/Pages.css
+++ b/CSS/Pages.css
@@ -127,6 +127,8 @@ span.mjx-itable {
 }
 
 div.toc {
+    position: relative;
+    z-index: 1;
     font-size: 0.85em;
     padding: 0.6em 1em;
     margin-top: 0;
